News UAT/force-app/main/default/objects/History_Tracking__c/History_Tracking__c.object-meta.xml
<CustomObject>
    <description>This object is created to keep track of changes on a record level.</description>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>HT-{00000000}</displayFormat>
        <label>History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>