News UAT/force-app/main/default/objects/History_Tracking__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the history tracking record</description>
    <inlineHelpText>Description of the history tracking record</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>