News UAT/force-app/main/default/objects/History_Tracking__c/fields/Immediate_Action__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the snapshots are taken synchronously or asynchronously</description>
    <inlineHelpText>Indicate if the snapshots are taken synchronously or asynchronously</inlineHelpText>
    <label>Immediate Action</label>
    <type>Checkbox</type>
</CustomField>