News UAT/force-app/main/default/objects/History_Tracking__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Indicate what object is being tracked</description>
    <inlineHelpText>Indicate what object is being tracked</inlineHelpText>
    <label>Object Tracked</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>