News UAT/force-app/main/default/objects/History_Tracking__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales order record that is being tracked.</description>
    <label>Sales Order</label>
    <referenceTo>csmso__Sales_Order__c</referenceTo>
    <relationshipLabel>History Tracking</relationshipLabel>
    <relationshipName>History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>