News UAT/force-app/main/default/objects/History_Tracking__c/fields/Snapshot_JSON__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_JSON__c</fullName>
    <description>Snapshot of the records</description>
    <inlineHelpText>Snapshot of the records</inlineHelpText>
    <label>Snapshot JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>